zblamb-sam/templates/networking.yaml
Resources:
  ZBLambVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: "10.0.0.0/16"
      Tags:
        - Key: Name
          Value: Zabbix Lambda monitor VPC
        - Key: Description
          Value: VPC for the Zabbix Lambda monitor project

  ZBLambInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: Zabbix Lambda monitor VPC Internet gateway
        - Key: Description
          Value: Internet gateway used in VPC for the Zabbix Lambda monitor project

  ZBLambAttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref ZBLambVPC
      InternetGatewayId: !Ref ZBLambInternetGateway

  ZBLambNATGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt ZBLambNATGatewayEIP.AllocationId
      SubnetId: !Ref ZBLambPubSubnet
      Tags:
        - Key: Name
          Value: Zabbix Lambda monitor NAT Gateway
          
  ZBLambNATGatewayEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: Zabbix Lambda monitor NAT IP

  ZBLambPrivSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref ZBLambVPC
      CidrBlock: "10.0.1.0/24"
      Tags:
        - Key: Name
          Value: Zabbix Lambda monitor VPC Private subnet
        - Key: Description
          Value: Private subnet in the VPC for the Zabbix Lambda monitor project

  ZBLambPubSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref ZBLambVPC
      CidrBlock: "10.0.2.0/24"
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: Zabbix Lambda monitor VPC Public subnet
        - Key: Description
          Value: Public subnet in the VPC for the Zabbix Lambda monitor project

  ZBLambRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref ZBLambVPC
      Tags:
        - Key: Name
          Value: Zabbix Lambda monitor VPC Public routing table
        - Key: Description
          Value: Public routing table used in VPC for the Zabbix Lambda monitor project

  # route 0.0.0.0/0 to internet gateway
  ZBLambPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: ZBLambAttachGateway
    Properties:
      RouteTableId: !Ref ZBLambRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref ZBLambInternetGateway  
      Tags:
        - Key: Name
          Value: Zabbix Lambda monitor VPC Public routing table
        - Key: Description
          Value: Routing internet traffic via Internet Gateway

  ZBLambPrivRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref ZBLambVPC
      Tags:
        - Key: Name
          Value: Zabbix Lambda monitor VPC Private routing table
        - Key: Description
          Value: Private routing table used in VPC for the Zabbix Lambda monitor project

  # route 0.0.0.0/0 to NAT GW
  ZBLambPrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref ZBLambPrivRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref ZBLambNATGateway
      Tags:
        - Key: Name
          Value: Zabbix Lambda monitor NAT default route
        - Key: Description
          Value: Routing internet traffic via NAT Gateway
  
  AssocRTtoPrivSubnet:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref ZBLambPrivRouteTable
      SubnetId: !Ref ZBlambPrivSubnet
  
  AssocRTtoPubSubnet:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref ZBLambRouteTable
      SubnetId: !Ref ZBlambPubSubnet  

Outputs:
  PublicSubnetId:
    Description: ID of the public subnet
    Value: !Ref ZBLambPubSubnet
    Export: 
      Name: ZBLamb::PublicSubnetId
  PrivateSubnetId:
    Description: ID of the private subnet
    Value: !Ref ZBLambPrivSubnet
    Export: 
      Name: ZBLamb::PrivateSubnetId
  VpcId:
    Description: ID of the VPC
    Value: !Ref ZBLambVPC
    Export: 
      Name: ZBLamb::VpcId
